CHANGES IN VERSION 1.24.0
-------------------------

NEW FEATURES

    o biocLite() uses lib.loc= to find devtools, reports more
    informatively why devtools fails to load

    o biocLite() only offers to update non-masked packages

    o biocLite() reports when packages in unwriteable directories are
    out-of-date, but does not try (and fail) to update them.

CHANGES IN VERSION 1.20.0
-------------------------

BUG FIXES

    o biocLite() uses lib.loc when calling update.packages

CHANGES IN VERSION 1.18.0
-------------------------

NEW FEATURES

    o biocLite() supports github repositories (implicitly, 'packages'
    following the 'maintainer/package' convention)

CHANGES IN VERSION 1.14.0
-------------------------

NEW FEATURES

    o biocUpdatePackages updates installed packages and their
    dependencies.

CHANGES IN VERSION 1.10.0
-------------------------

NEW FEATURES

    o biocValid() checks that installed packages are consistent with
    those available via biocLite().

    o biocVersion() returns the version of Bioconductor expected with
    this version of the BiocInstaller package.

USER-VISIBLE CHANGES

    o biocLite() invoked with no arguments updates currently installed
    packages to their most-recent version.
