@@ -1,5 +1,5 @@
 import("utils")
 
 export(biocLite, biocVersion, biocUpdatePackages, biocinstallRepos,
-    useDevel, biocValid, monograph_group, RBioinf_group,
+    isDevel, useDevel, biocValid, monograph_group, RBioinf_group,
     biocases_group, all_group)
